Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/using/windows.po
+++ b/using/windows.po
@@ -95,7 +95,7 @@ msgid ""
 msgstr ""
 ":ref:`windows-store` es una instalación simple de Python que es adecuada "
 "para ejecutar scripts y paquetes y usar IDLE u otros entornos de desarrollo. "
-"Requiere Windows 10 y superior, pero se puede instalar de forma segura sin "
+"Requiere Windows 10 o superior, pero se puede instalar de forma segura sin "
 "corromper otros programas. También proporciona muchos comandos convenientes "
 "para iniciar Python y sus herramientas."
 
@@ -913,7 +913,7 @@ msgid ""
 "\\Windows\\\\System32` plus the contents of :file:`C:\\\\Program Files\\"
 "\\WindowsApps\\\\package_name\\\\VFS\\\\SystemX86`."
 msgstr ""
-"Al leer archivos, Windows devolverá el archivo de la carpeta privada, o si "
+"Al leer archivos, Windows retornará el archivo de la carpeta privada, o si "
 "no existe, el directorio real de Windows. Por ejemplo, leer :file:`C:\\"
 "\\Windows\\\\System32` retorna el contenido de :file:`C:\\\\Windows\\"
 "\\System32` más el contenido de :file:`C:\\\\Program Files\\\\WindowsApps\\"
@@ -1108,10 +1108,10 @@ msgid ""
 "installed on a user's system previously or automatically via Windows Update, "
 "and can be detected by finding ``ucrtbase.dll`` in the system directory."
 msgstr ""
-"La distribución integrada no incluye el `Microsoft C Runtime <https://docs."
+"La distribución integrada no incluye la `Microsoft C Runtime <https://docs."
 "microsoft.com/en-US/cpp/windows/latest-supported-vc-redist#visual-"
 "studio-2015-2017-2019-and-2022>`_ y es responsabilidad del instalador de la "
-"aplicación proporcionarlo. Es posible que el tiempo de ejecución ya se haya "
+"aplicación proporcionarlo. Es posible que la biblioteca runtime ya se haya "
 "instalado en el sistema de un usuario previamente o automáticamente a través "
 "de Windows Update, y se puede detectar al encontrar ``ucrtbase.dll`` en el "
 "directorio del sistema."
@@ -1295,7 +1295,7 @@ msgid ""
 "of-life-transition-to-the-Enthought-Deployment-Manager-EDM-and-Visual-Studio-"
 "Code>`_."
 msgstr ""
-"Anteriormente, Enthought proporcionaba Canopy, pero `reached end of life in "
+"Anteriormente, Enthought proporcionaba Canopy, pero `llegó al final de su vida en"
 "2016 <https://support.enthought.com/hc/en-us/articles/360038600051-Canopy-"
 "GUI-end-of-life-transition-to-the-Enthought-Deployment-Manager-EDM-and-"
 "Visual-Studio-Code>`_."
@@ -1644,9 +1644,9 @@ msgid ""
 "the launcher is available, execute the following command in Command Prompt::"
 msgstr ""
 "Las instalaciones de todo el sistema de Python 3.3 y versiones posteriores "
-"colocarán el iniciador en su :envvar:`PATH`. El lanzador es compatible con "
+"colocarán el lanzador en su :envvar:`PATH`. El lanzador es compatible con "
 "todas las versiones disponibles de Python, por lo que no importa qué versión "
-"esté instalada. Para comprobar que el iniciador está disponible, ejecute el "
+"esté instalada. Para comprobar que el lanzador está disponible, ejecute el "
 "siguiente comando en el símbolo del sistema:"
 
 #: ../Doc/using/windows.rst:718
@@ -1759,8 +1759,8 @@ msgstr ""
 "reciente de Python 3.x. Al igual que con los ejemplos de línea de comandos "
 "anteriores, puede especificar un calificador de versión más explícito. "
 "Suponiendo que tiene instalado Python 3.7, intente cambiar la primera línea "
-"a ``#! python3.7`` y debería encontrar la |version| información de la "
-"versión impresa."
+"a ``#! python3.7`` y debería encontrar la información de la versión |version|"
+"impresa."
 
 #: ../Doc/using/windows.rst:790
 msgid ""
@@ -2165,7 +2165,7 @@ msgid ""
 "the target Python. It is primarily intended for testing and debugging."
 msgstr ""
 "Si se establece una variable de entorno :envvar:`PYLAUNCHER_DEBUG` (en "
-"cualquier valor), el iniciador imprimirá información de diagnóstico en "
+"cualquier valor), el lanzador imprimirá información de diagnóstico en "
 "stderr (es decir, en la consola). Si bien esta información logra ser "
 "simultáneamente detallada *and* concisa, debería permitirle ver qué "
 "versiones de Python se ubicaron, por qué se eligió una versión en particular "
@@ -2186,9 +2186,9 @@ msgid ""
 "correctly in the console."
 msgstr ""
 "Si se establece una variable de entorno :envvar:`PYLAUNCHER_DRYRUN` (en "
-"cualquier valor), el iniciador generará el comando que habría ejecutado, "
+"cualquier valor), el lanzador generará el comando que habría ejecutado, "
 "pero en realidad no iniciará Python. Esto puede ser útil para las "
-"herramientas que desean usar el iniciador para detectar y luego iniciar "
+"herramientas que desean usar el lanzador para detectar y luego iniciar "
 "Python directamente. Tenga en cuenta que el comando escrito en la salida "
 "estándar siempre se codifica con UTF-8 y es posible que no se represente "
 "correctamente en la consola."
@@ -2207,7 +2207,7 @@ msgid ""
 msgstr ""
 "Si se establece una variable de entorno :envvar:`PYLAUNCHER_ALLOW_INSTALL` "
 "(en cualquier valor) y la versión de Python solicitada no está instalada "
-"pero está disponible en Microsoft Store, el iniciador intentará instalarla. "
+"pero está disponible en Microsoft Store, el lanzador intentará instalarla. "
 "Esto puede requerir la interacción del usuario para completarse y es posible "
 "que deba ejecutar el comando nuevamente."
 
@@ -2219,7 +2219,7 @@ msgid ""
 "`PYLAUNCHER_DRYRUN`)."
 msgstr ""
 "Una variable :envvar:`PYLAUNCHER_ALWAYS_INSTALL` adicional hace que el "
-"iniciador siempre intente instalar Python, incluso si se detecta. Esto está "
+"lanzador siempre intente instalar Python, incluso si se detecta. Esto está "
 "diseñado principalmente para pruebas (y debe usarse con :envvar:"
 "`PYLAUNCHER_DRYRUN`)."
 
@@ -2233,7 +2233,7 @@ msgid ""
 "Unfortunately, there is no way to distinguish these from the exit code of "
 "Python itself."
 msgstr ""
-"El iniciador de Python puede devolver los siguientes códigos de salida. "
+"El lanzador de Python puede retornar los siguientes códigos de salida. "
 "Desafortunadamente, no hay forma de distinguirlos del código de salida de "
 "Python."
 
