--- a/using/windows.po
+++ b/using/windows.po
@@ -1295,10 +1295,10 @@ msgid ""
 "of-life-transition-to-the-Enthought-Deployment-Manager-EDM-and-Visual-Studio-"
 "Code>`_."
 msgstr ""
-"Anteriormente, Enthought proporcionaba Canopy, pero `llegó al final de su vida en"
-"2016 <https://support.enthought.com/hc/en-us/articles/360038600051-Canopy-"
-"GUI-end-of-life-transition-to-the-Enthought-Deployment-Manager-EDM-and-"
-"Visual-Studio-Code>`_."
+"Anteriormente, Enthought proporcionaba Canopy, pero `llegó al final de su "
+"vida en2016 <https://support.enthought.com/hc/en-us/articles/360038600051-"
+"Canopy-GUI-end-of-life-transition-to-the-Enthought-Deployment-Manager-EDM-"
+"and-Visual-Studio-Code>`_."
 
 #: ../Doc/using/windows.rst:546
 msgid "`WinPython <https://winpython.github.io/>`_"
@@ -2165,8 +2165,8 @@ msgid ""
 "the target Python. It is primarily intended for testing and debugging."
 msgstr ""
 "Si se establece una variable de entorno :envvar:`PYLAUNCHER_DEBUG` (en "
-"cualquier valor), el lanzador imprimirá información de diagnóstico en "
-"stderr (es decir, en la consola). Si bien esta información logra ser "
+"cualquier valor), el lanzador imprimirá información de diagnóstico en stderr "
+"(es decir, en la consola). Si bien esta información logra ser "
 "simultáneamente detallada *and* concisa, debería permitirle ver qué "
 "versiones de Python se ubicaron, por qué se eligió una versión en particular "
 "y la línea de comando exacta utilizada para ejecutar el Python de destino. "
@@ -2186,11 +2186,11 @@ msgid ""
 "correctly in the console."
 msgstr ""
 "Si se establece una variable de entorno :envvar:`PYLAUNCHER_DRYRUN` (en "
-"cualquier valor), el lanzador generará el comando que habría ejecutado, "
-"pero en realidad no iniciará Python. Esto puede ser útil para las "
-"herramientas que desean usar el lanzador para detectar y luego iniciar "
-"Python directamente. Tenga en cuenta que el comando escrito en la salida "
-"estándar siempre se codifica con UTF-8 y es posible que no se represente "
+"cualquier valor), el lanzador generará el comando que habría ejecutado, pero "
+"en realidad no iniciará Python. Esto puede ser útil para las herramientas "
+"que desean usar el lanzador para detectar y luego iniciar Python "
+"directamente. Tenga en cuenta que el comando escrito en la salida estándar "
+"siempre se codifica con UTF-8 y es posible que no se represente "
 "correctamente en la consola."
 
 #: ../Doc/using/windows.rst:1000
