Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/howto/enum.po
+++ b/howto/enum.po
@@ -20,7 +20,7 @@ msgstr ""
 
 #: ../Doc/howto/enum.rst:3
 msgid "Enum HOWTO"
-msgstr "Enum CÓMO"
+msgstr "HOWTO - Enum"
 
 #: ../Doc/howto/enum.rst:9
 msgid ""
@@ -115,11 +115,11 @@ msgstr ""
 "A diferencia de muchos lenguajes que tratan las enumeraciones únicamente "
 "como pares de nombre/valor, Python Enums puede tener un comportamiento "
 "agregado. Por ejemplo, :class:`datetime.date` tiene dos métodos para "
-"devolver el día de la semana: :meth:`weekday` y :meth:`isoweekday`. La "
+"retornar el día de la semana: :meth:`weekday` y :meth:`isoweekday`. La "
 "diferencia es que uno de ellos cuenta de 0 a 6 y el otro de 1 a 7. En lugar "
 "de hacer un seguimiento de eso nosotros mismos, podemos agregar un método a "
 "la enumeración :class:`Weekday` para extraer el día de la instancia :class:"
-"`date` y devolver el miembro de enumeración coincidente:"
+"`date` y retornar el miembro de enumeración coincidente:"
 
 #: ../Doc/howto/enum.rst:86
 msgid "The complete :class:`Weekday` enum now looks like this::"
@@ -127,7 +127,7 @@ msgstr "La enumeración :class:`Weekday` completa ahora se ve así:"
 
 #: ../Doc/howto/enum.rst:101
 msgid "Now we can find out what today is!  Observe::"
-msgstr "¡Ahora podemos averiguar qué es hoy! Observar::"
+msgstr "¡Ahora podemos averiguar qué día de la semana es hoy! Observe::"
 
 #: ../Doc/howto/enum.rst:107
 msgid ""
@@ -154,7 +154,7 @@ msgid ""
 "are all powers of 2."
 msgstr ""
 "Hemos cambiado dos cosas: somos heredados de :class:`Flag` y los valores son "
-"todos potencias de 2."
+"todos potencia de 2."
 
 #: ../Doc/howto/enum.rst:127
 msgid ""
@@ -202,8 +202,8 @@ msgid ""
 "e. situations where ``Color.RED`` won't do because the exact color is not "
 "known at program-writing time).  ``Enum`` allows such access::"
 msgstr ""
-"A veces es útil acceder a los miembros en las enumeraciones mediante "
-"programación (es decir, situaciones en las que ``Color.RED`` no funcionará "
+"A veces es útil acceder a los miembros en las enumeraciones programáticamente "
+"(es decir, situaciones en las que ``Color.RED`` no funcionará "
 "porque no se conoce el color exacto en el momento de escribir el programa). "
 "``Enum`` permite dicho acceso::"
 
@@ -238,9 +238,9 @@ msgstr ""
 "Sin embargo, un miembro de enumeración puede tener otros nombres asociados. "
 "Dadas dos entradas ``A`` y ``B`` con el mismo valor (y ``A`` definido "
 "primero), ``B`` es un alias para el miembro ``A``. La búsqueda por valor del "
-"valor de ``A`` devolverá el miembro ``A``. La búsqueda por nombre de ``A`` "
-"devolverá el miembro ``A``. La búsqueda por nombre de ``B`` también "
-"devolverá el miembro ``A``::"
+"valor de ``A`` retornará el miembro ``A``. La búsqueda por nombre de ``A`` "
+"retornará el miembro ``A``. La búsqueda por nombre de ``B`` también "
+"retornará el miembro ``A``::"
 
 #: ../Doc/howto/enum.rst:243
 msgid ""
@@ -321,7 +321,7 @@ msgstr "comparaciones"
 
 #: ../Doc/howto/enum.rst:331
 msgid "Enumeration members are compared by identity::"
-msgstr "Los miembros de la enumeración se comparan por identidad:"
+msgstr "Los miembros de la enumeración se comparan por identidad::"
 
 #: ../Doc/howto/enum.rst:340
 msgid ""
@@ -342,8 +342,8 @@ msgid ""
 "(again, :class:`IntEnum` was explicitly designed to behave differently, see "
 "below)::"
 msgstr ""
-"Las comparaciones con valores que no son de enumeración siempre se "
-"compararán de forma diferente (nuevamente, :class:`IntEnum` se diseñó "
+"Las comparaciones con valores que no son de enumeración siempre "
+"comparan no iguales (nuevamente, :class:`IntEnum` se diseñó "
 "explícitamente para comportarse de manera diferente, consulte a "
 "continuación):"
 
@@ -446,11 +446,11 @@ msgstr ""
 
 #: ../Doc/howto/enum.rst:453
 msgid "Pickling"
-msgstr "decapado"
+msgstr "Serialización (Pickling)"
 
 #: ../Doc/howto/enum.rst:455
 msgid "Enumerations can be pickled and unpickled::"
-msgstr "Las enumeraciones se pueden decapar y decapar:"
+msgstr "Las enumeraciones se pueden serializar y deserializar:"
 
 #: ../Doc/howto/enum.rst:462
 msgid ""
@@ -458,7 +458,7 @@ msgid ""
 "in the top level of a module, since unpickling requires them to be "
 "importable from that module."
 msgstr ""
-"Se aplican las restricciones habituales para el decapado: las enumeraciones "
+"Se aplican las restricciones habituales para el *pickling*: las enumeraciones "
 "serializables deben definirse en el nivel superior de un módulo, ya que el "
 "decapado requiere que se puedan importar desde ese módulo."
 
@@ -467,7 +467,7 @@ msgid ""
 "With pickle protocol version 4 it is possible to easily pickle enums nested "
 "in other classes."
 msgstr ""
-"Con la versión 4 del protocolo pickle es posible decapar fácilmente "
+"Con la versión 4 del protocolo pickle es posible deserializar fácilmente "
 "enumeraciones anidadas en otras clases."
 
 #: ../Doc/howto/enum.rst:471
@@ -476,7 +476,7 @@ msgid ""
 "meth:`__reduce_ex__` in the enumeration class."
 msgstr ""
 "Es posible modificar la forma en que los miembros de la enumeración se "
-"decapan o decapan definiendo :meth:`__reduce_ex__` en la clase de "
+"serialicen / deserialicen definiendo :meth:`__reduce_ex__` en la clase de "
 "enumeración."
 
 #: ../Doc/howto/enum.rst:476
@@ -538,7 +538,7 @@ msgid ""
 "function in a separate module, and also may not work on IronPython or "
 "Jython). The solution is to specify the module name explicitly as follows::"
 msgstr ""
-"Decapar las enumeraciones creadas con la API funcional puede ser complicado, "
+"Deserializar las enumeraciones creadas con la API funcional puede ser complicado, "
 "ya que los detalles de implementación de la pila de marcos se usan para "
 "tratar de averiguar en qué módulo se está creando la enumeración (por "
 "ejemplo, fallará si usa una función de utilidad en un módulo separado, y "
@@ -573,7 +573,7 @@ msgstr "La firma completa es::"
 
 #: ../Doc/howto/enum.rst
 msgid "value"
-msgstr "valor"
+msgstr "value"
 
 #: ../Doc/howto/enum.rst:544
 msgid "What the new enum class will record as its name."
@@ -581,7 +581,7 @@ msgstr "Lo que la nueva clase de enumeración registrará como su nombre."
 
 #: ../Doc/howto/enum.rst
 msgid "names"
-msgstr "nombres"
+msgstr "names"
 
 #: ../Doc/howto/enum.rst:546
 msgid ""
@@ -606,7 +606,7 @@ msgstr "o un mapeo::"
 
 #: ../Doc/howto/enum.rst
 msgid "module"
-msgstr "módulo"
+msgstr "module"
 
 #: ../Doc/howto/enum.rst:563
 msgid "name of module where new enum class can be found."
@@ -615,7 +615,7 @@ msgstr ""
 
 #: ../Doc/howto/enum.rst
 msgid "qualname"
-msgstr "nombre de calidad"
+msgstr "qualname"
 
 #: ../Doc/howto/enum.rst:565
 msgid "where in module new enum class can be found."
@@ -623,15 +623,15 @@ msgstr "donde en el módulo se puede encontrar la nueva clase de enumeración."
 
 #: ../Doc/howto/enum.rst
 msgid "type"
-msgstr "escribe"
+msgstr "type"
 
 #: ../Doc/howto/enum.rst:567
 msgid "type to mix in to new enum class."
-msgstr "escriba para mezclar en la nueva clase de enumeración."
+msgstr "tipo para mezclar en la nueva clase de enumeración."
 
 #: ../Doc/howto/enum.rst
 msgid "start"
-msgstr "comienzo"
+msgstr "start"
 
 #: ../Doc/howto/enum.rst:569
 msgid "number to start counting at if only names are passed in."
@@ -1088,7 +1088,7 @@ msgstr ""
 
 #: ../Doc/howto/enum.rst:936
 msgid "_Private__names"
-msgstr "_Privado__nombres"
+msgstr "_Private__names"
 
 #: ../Doc/howto/enum.rst:938
 msgid ""
@@ -1247,7 +1247,7 @@ msgstr ""
 #: ../Doc/howto/enum.rst:1095
 msgid "STRICT --> raises an exception when presented with invalid values"
 msgstr ""
-"ESTRICTO -> genera una excepción cuando se presentan valores no válidos"
+"STRICT --> genera una excepción cuando se presentan valores no válidos"
 
 #: ../Doc/howto/enum.rst:1096
 msgid "CONFORM --> discards any invalid bits"
@@ -1261,7 +1261,7 @@ msgstr ""
 
 #: ../Doc/howto/enum.rst:1101
 msgid "KEEP --> keep the extra bits"
-msgstr "MANTENER --> mantener los bits adicionales"
+msgstr "KEEP --> mantener los bits adicionales"
 
 #: ../Doc/howto/enum.rst:1099
 msgid "keeps Flag status and extra bits"
