--- a/howto/enum.po
+++ b/howto/enum.po
@@ -202,10 +202,10 @@ msgid ""
 "e. situations where ``Color.RED`` won't do because the exact color is not "
 "known at program-writing time).  ``Enum`` allows such access::"
 msgstr ""
-"A veces es útil acceder a los miembros en las enumeraciones programáticamente "
-"(es decir, situaciones en las que ``Color.RED`` no funcionará "
-"porque no se conoce el color exacto en el momento de escribir el programa). "
-"``Enum`` permite dicho acceso::"
+"A veces es útil acceder a los miembros en las enumeraciones "
+"programáticamente (es decir, situaciones en las que ``Color.RED`` no "
+"funcionará porque no se conoce el color exacto en el momento de escribir el "
+"programa). ``Enum`` permite dicho acceso::"
 
 #: ../Doc/howto/enum.rst:193
 msgid "If you want to access enum members by *name*, use item access::"
@@ -342,10 +342,9 @@ msgid ""
 "(again, :class:`IntEnum` was explicitly designed to behave differently, see "
 "below)::"
 msgstr ""
-"Las comparaciones con valores que no son de enumeración siempre "
-"comparan no iguales (nuevamente, :class:`IntEnum` se diseñó "
-"explícitamente para comportarse de manera diferente, consulte a "
-"continuación):"
+"Las comparaciones con valores que no son de enumeración siempre comparan no "
+"iguales (nuevamente, :class:`IntEnum` se diseñó explícitamente para "
+"comportarse de manera diferente, consulte a continuación):"
 
 #: ../Doc/howto/enum.rst:366
 msgid "Allowed members and attributes of enumerations"
@@ -458,9 +457,9 @@ msgid ""
 "in the top level of a module, since unpickling requires them to be "
 "importable from that module."
 msgstr ""
-"Se aplican las restricciones habituales para el *pickling*: las enumeraciones "
-"serializables deben definirse en el nivel superior de un módulo, ya que el "
-"decapado requiere que se puedan importar desde ese módulo."
+"Se aplican las restricciones habituales para el *pickling*: las "
+"enumeraciones serializables deben definirse en el nivel superior de un "
+"módulo, ya que el decapado requiere que se puedan importar desde ese módulo."
 
 #: ../Doc/howto/enum.rst:468
 msgid ""
@@ -538,11 +537,11 @@ msgid ""
 "function in a separate module, and also may not work on IronPython or "
 "Jython). The solution is to specify the module name explicitly as follows::"
 msgstr ""
-"Deserializar las enumeraciones creadas con la API funcional puede ser complicado, "
-"ya que los detalles de implementación de la pila de marcos se usan para "
-"tratar de averiguar en qué módulo se está creando la enumeración (por "
-"ejemplo, fallará si usa una función de utilidad en un módulo separado, y "
-"también puede no trabajar en IronPython o Jython). La solución es "
+"Deserializar las enumeraciones creadas con la API funcional puede ser "
+"complicado, ya que los detalles de implementación de la pila de marcos se "
+"usan para tratar de averiguar en qué módulo se está creando la enumeración "
+"(por ejemplo, fallará si usa una función de utilidad en un módulo separado, "
+"y también puede no trabajar en IronPython o Jython). La solución es "
 "especificar el nombre del módulo explícitamente de la siguiente manera:"
 
 #: ../Doc/howto/enum.rst:521
@@ -1246,8 +1245,7 @@ msgstr ""
 
 #: ../Doc/howto/enum.rst:1095
 msgid "STRICT --> raises an exception when presented with invalid values"
-msgstr ""
-"STRICT --> genera una excepción cuando se presentan valores no válidos"
+msgstr "STRICT --> genera una excepción cuando se presentan valores no válidos"
 
 #: ../Doc/howto/enum.rst:1096
 msgid "CONFORM --> discards any invalid bits"
