--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-01-30 15:38-0300\n"
+"PO-Revision-Date: 2023-02-01 14:18-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -338,6 +338,9 @@ msgid ""
 "Unlike key functions that return an absolute value for sorting, a comparison "
 "function computes the relative ordering for two inputs."
 msgstr ""
+"A diferencia de las funciones clave que devuelven un valor absoluto para la "
+"ordenación, una función de comparación calcula la ordenación relativa para "
+"dos entradas."
 
 #: ../Doc/howto/sorting.rst:235
 msgid ""
@@ -347,6 +350,11 @@ msgid ""
 "function such as ``cmp(a, b)`` will return a negative value for less-than, "
 "zero if the inputs are equal, or a positive value for greater-than."
 msgstr ""
+"Por ejemplo, una `escala de balance <https://upload.wikimedia.org/wikipedia/"
+"commons/1/17/Balance_à_tabac_1850.JPG>`_ compara dos muestras dando un orden "
+"relativo: más ligero, igual o más pesado. Del mismo modo, una función de "
+"comparación como ``cmp(a, b)`` devolverá un valor negativo para menor que, "
+"cero si las entradas son iguales, o un valor positivo para mayor que."
 
 #: ../Doc/howto/sorting.rst:242
 msgid ""
@@ -355,6 +363,10 @@ msgid ""
 "part of their API.  For example, :func:`locale.strcoll` is a comparison "
 "function."
 msgstr ""
+"Es habitual encontrar funciones de comparación al traducir algoritmos de "
+"otros lenguajes.  Además, algunas bibliotecas proporcionan funciones de "
+"comparación como parte de su API.  Por ejemplo, :func:`locale.strcoll` es "
+"una función de comparación."
 
 #: ../Doc/howto/sorting.rst:246
 msgid ""
@@ -362,6 +374,9 @@ msgid ""
 "cmp_to_key` to wrap the comparison function to make it usable as a key "
 "function::"
 msgstr ""
+"Para adaptarse a estas situaciones, Python proporciona :class:`functools."
+"cmp_to_key` para envolver la función de comparación y hacerla utilizable "
+"como una función clave::"
 
 #: ../Doc/howto/sorting.rst:253
 #, fuzzy
