--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-02-01 14:18-0300\n"
+"PO-Revision-Date: 2023-02-02 09:49-0300\n"
 "Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -235,10 +235,11 @@ msgstr ""
 "Python realiza múltiples ordenamientos de manera eficiente porque puede "
 "aprovechar cualquier orden ya presente en el conjunto de datos."
 
+# Esto son siglas de un patron de implementación, debiese ir en inglés.
 #: ../Doc/howto/sorting.rst:190
 #, fuzzy
 msgid "Decorate-Sort-Undecorate"
-msgstr "El método tradicional utilizando *Decorate-Sort-Undecorate*"
+msgstr "Decorate-Sort-Undecorate"
 
 #: ../Doc/howto/sorting.rst:192
 msgid "This idiom is called Decorate-Sort-Undecorate after its three steps:"
@@ -379,20 +380,20 @@ msgstr ""
 "como una función clave::"
 
 #: ../Doc/howto/sorting.rst:253
-#, fuzzy
 msgid "Odds and Ends"
-msgstr "Comentarios finales"
+msgstr "Curiosidades"
 
 #: ../Doc/howto/sorting.rst:255
-#, fuzzy
 msgid ""
 "For locale aware sorting, use :func:`locale.strxfrm` for a key function or :"
 "func:`locale.strcoll` for a comparison function.  This is necessary because "
 "\"alphabetical\" sort orderings can vary across cultures even if the "
 "underlying alphabet is the same."
 msgstr ""
-"Para una ordenación local, use :func:`locale.strxfrm` para una función clave "
-"o :func:`locale.strcoll` para una función de comparación."
+"Para ordenar teniendo en cuenta la localización, utilice :func:`locale."
+"strxfrm` para una función clave o :func:`locale.strcoll` para una función de "
+"comparación.  Esto es necesario porque la ordenación \"alfabética\" puede "
+"variar entre culturas aunque el alfabeto subyacente sea el mismo."
 
 #: ../Doc/howto/sorting.rst:260
 msgid ""
@@ -407,16 +408,14 @@ msgstr ""
 "incorporada :func:`reversed` dos veces:"
 
 #: ../Doc/howto/sorting.rst:274
-#, fuzzy
 msgid ""
 "The sort routines use ``<`` when making comparisons between two objects. So, "
 "it is easy to add a standard sort order to a class by defining an :meth:"
 "`__lt__` method:"
 msgstr ""
-"Se garantiza que las rutinas de clasificación utilizarán :meth:`__lt__` al "
-"realizar comparaciones entre dos objetos. Por lo tanto, es fácil agregar un "
-"orden de clasificación estándar a una clase definiendo un método :meth:"
-"`__lt__`:"
+"Las rutinas de ordenación utilizan ``<`` cuando realizan comparaciones entre "
+"dos objetos. Por lo tanto, es fácil añadir una ordenación estándar a una "
+"clase definiendo un método :meth:`__lt__`:"
 
 #: ../Doc/howto/sorting.rst:284
 msgid ""
