--- a/howto/sorting.po
+++ b/howto/sorting.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-04 17:32+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-02-02 11:08-0300\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/howto/sorting.rst:4
 msgid "Sorting HOW TO"
@@ -234,10 +235,10 @@ msgstr ""
 "Python realiza múltiples ordenamientos de manera eficiente porque puede "
 "aprovechar cualquier orden ya presente en el conjunto de datos."
 
+# Esto son siglas de un patron de implementación, debiese ir en inglés.
 #: ../Doc/howto/sorting.rst:190
-#, fuzzy
 msgid "Decorate-Sort-Undecorate"
-msgstr "El método tradicional utilizando *Decorate-Sort-Undecorate*"
+msgstr "Decorate-Sort-Undecorate"
 
 #: ../Doc/howto/sorting.rst:192
 msgid "This idiom is called Decorate-Sort-Undecorate after its three steps:"
@@ -330,13 +331,16 @@ msgstr ""
 
 #: ../Doc/howto/sorting.rst:230
 msgid "Comparison Functions"
-msgstr ""
+msgstr "Funciones de comparación"
 
 #: ../Doc/howto/sorting.rst:232
 msgid ""
 "Unlike key functions that return an absolute value for sorting, a comparison "
 "function computes the relative ordering for two inputs."
 msgstr ""
+"A diferencia de las funciones clave que devuelven un valor absoluto para la "
+"ordenación, una función de comparación calcula la ordenación relativa para "
+"dos entradas."
 
 #: ../Doc/howto/sorting.rst:235
 msgid ""
@@ -346,6 +350,11 @@ msgid ""
 "function such as ``cmp(a, b)`` will return a negative value for less-than, "
 "zero if the inputs are equal, or a positive value for greater-than."
 msgstr ""
+"Por ejemplo, una `escala de balance <https://upload.wikimedia.org/wikipedia/"
+"commons/1/17/Balance_à_tabac_1850.JPG>`_ compara dos muestras dando un orden "
+"relativo: más ligero, igual o más pesado. Del mismo modo, una función de "
+"comparación como ``cmp(a, b)`` devolverá un valor negativo para menor que, "
+"cero si las entradas son iguales, o un valor positivo para mayor que."
 
 #: ../Doc/howto/sorting.rst:242
 msgid ""
@@ -354,6 +363,10 @@ msgid ""
 "part of their API.  For example, :func:`locale.strcoll` is a comparison "
 "function."
 msgstr ""
+"Es habitual encontrar funciones de comparación al traducir algoritmos de "
+"otros lenguajes.  Además, algunas bibliotecas proporcionan funciones de "
+"comparación como parte de su API.  Por ejemplo, :func:`locale.strcoll` es "
+"una función de comparación."
 
 #: ../Doc/howto/sorting.rst:246
 msgid ""
@@ -361,22 +374,25 @@ msgid ""
 "cmp_to_key` to wrap the comparison function to make it usable as a key "
 "function::"
 msgstr ""
+"Para adaptarse a estas situaciones, Python proporciona :class:`functools."
+"cmp_to_key` para envolver la función de comparación y hacerla utilizable "
+"como una función clave::"
 
 #: ../Doc/howto/sorting.rst:253
-#, fuzzy
 msgid "Odds and Ends"
-msgstr "Comentarios finales"
+msgstr "Curiosidades"
 
 #: ../Doc/howto/sorting.rst:255
-#, fuzzy
 msgid ""
 "For locale aware sorting, use :func:`locale.strxfrm` for a key function or :"
 "func:`locale.strcoll` for a comparison function.  This is necessary because "
 "\"alphabetical\" sort orderings can vary across cultures even if the "
 "underlying alphabet is the same."
 msgstr ""
-"Para una ordenación local, use :func:`locale.strxfrm` para una función clave "
-"o :func:`locale.strcoll` para una función de comparación."
+"Para ordenar teniendo en cuenta la localización, utilice :func:`locale."
+"strxfrm` para una función clave o :func:`locale.strcoll` para una función de "
+"comparación.  Esto es necesario porque la ordenación \"alfabética\" puede "
+"variar entre culturas aunque el alfabeto subyacente sea el mismo."
 
 #: ../Doc/howto/sorting.rst:260
 msgid ""
@@ -391,22 +407,22 @@ msgstr ""
 "incorporada :func:`reversed` dos veces:"
 
 #: ../Doc/howto/sorting.rst:274
-#, fuzzy
 msgid ""
 "The sort routines use ``<`` when making comparisons between two objects. So, "
 "it is easy to add a standard sort order to a class by defining an :meth:"
 "`__lt__` method:"
 msgstr ""
-"Se garantiza que las rutinas de clasificación utilizarán :meth:`__lt__` al "
-"realizar comparaciones entre dos objetos. Por lo tanto, es fácil agregar un "
-"orden de clasificación estándar a una clase definiendo un método :meth:"
-"`__lt__`:"
+"Las rutinas de ordenación utilizan ``<`` cuando realizan comparaciones entre "
+"dos objetos. Por lo tanto, es fácil añadir una ordenación estándar a una "
+"clase definiendo un método :meth:`__lt__`:"
 
 #: ../Doc/howto/sorting.rst:284
 msgid ""
 "However, note that ``<`` can fall back to using :meth:`__gt__` if :meth:"
 "`__lt__` is not implemented (see :func:`object.__lt__`)."
 msgstr ""
+"Sin embargo, tenga en cuenta que ``<`` puede recurrir a usar :meth:`__gt__` "
+"si :meth:`__lt__` no está implementado (ver :func:`object.__lt__`)."
 
 #: ../Doc/howto/sorting.rst:287
 msgid ""
