Translate 'using/mac.po'

--- a/using/mac.po
+++ b/using/mac.po
@@ -57,23 +57,29 @@ msgid ""
 "org).  A current \"universal binary\" build of Python, which runs natively "
 "on the Mac's new Intel and legacy PPC CPU's, is available there."
 msgstr ""
+"macOS solía venir con Python 2.7 preinstalado entre las versiones 10.8 y "
+"`12.3 <https://developer.apple.com/documentation/macos-release-notes/"
+"macos-12_3-release-notes#Python>`_. Te invitamos a instalar la versión más "
+"reciente de Python 3 desde el sitio web de Python (https://www.python."
+"org).  Un paquete \"binario universal\" para la versión actual de Python, "
+"que se ejecuta nativamente en el nuevo procesador Intel y el antiguo PPC "
+"de Mac, está disponible ahí."
 
 #: ../Doc/using/mac.rst:27
 msgid "What you get after installing is a number of things:"
 msgstr "Lo que obtienes después de instalar es una serie de cosas:"
 
 #: ../Doc/using/mac.rst:29
-#, fuzzy
 msgid ""
 "A :file:`Python 3.12` folder in your :file:`Applications` folder. In here "
 "you find IDLE, the development environment that is a standard part of "
 "official Python distributions; and PythonLauncher, which handles double-"
 "clicking Python scripts from the Finder."
 msgstr ""
-"Una carpeta :file:`Python 3.9` en su carpeta :file:`Applications`. Aquí "
+"Una carpeta :file:`Python 3.12` en su carpeta :file:`Applications`. Aquí "
 "encontrará IDLE, el entorno de desarrollo que es una parte estándar de las "
-"distribuciones oficiales de Python; y PythonLauncher, que se encarga de "
-"hacer doble clic en los scripts de Python desde el Finder."
+"distribuciones oficiales de Python; y PythonLauncher, que habilita la "
+"opción de hacer doble clic en los scripts de Python desde el Finder."
 
 #: ../Doc/using/mac.rst:34
 msgid ""
@@ -140,7 +146,6 @@ msgstr ""
 "Ayuda cuando el IDE se está ejecutando."
 
 #: ../Doc/using/mac.rst:62
-#, fuzzy
 msgid ""
 "If you want to run Python scripts from the Terminal window command line or "
 "from the Finder you first need an editor to create your script. macOS comes "
@@ -155,10 +160,10 @@ msgstr ""
 "Si desea ejecutar scripts de Python desde la línea de comandos de la ventana "
 "de Terminal o desde el Finder, primero necesita un editor para crear su "
 "script. macOS viene con varios editores de línea de comandos estándar de "
-"Unix, entre ellos :program:`vim` y :program:`emacs`. Si desea un editor más "
+"Unix, entre ellos :program:`vim` e :program:`emacs`. Si desea un editor más "
 "parecido a Mac, :program:`BBEdit` o :program:`TextWrangler` de Bare Bones "
 "Software (consulte http://www.barebones.com/products/bbedit/index.html) son "
-"buenas opciones , como también lo es :program:`TextMate` (ver https://"
+"buenas opciones, como también lo es :program:`TextMate` (ver https://"
 "macromates.com/). Otros editores incluyen :program:`Gvim` (http://macvim-dev."
 "github.io/macvim/) y :program:`Aquamacs` (http://aquamacs.org/)."
 
@@ -341,7 +346,6 @@ msgid "Distributing Python Applications on the Mac"
 msgstr "Distribuyendo aplicaciones de Python en la Mac"
 
 #: ../Doc/using/mac.rst:162
-#, fuzzy
 msgid ""
 "The standard tool for deploying standalone Python applications on the Mac "
 "is :program:`py2app`. More information on installing and using py2app can be "
@@ -349,7 +353,7 @@ msgid ""
 msgstr ""
 "La herramienta estándar para implementar aplicaciones independientes de "
 "Python en Mac es :program:`py2app`. Puede encontrar más información sobre la "
-"instalación y el uso de py2app en http://undefined.org/python/#py2app."
+"instalación y el uso de py2app en http://pypi.org/project/py2app."
 
 #: ../Doc/using/mac.rst:168
 msgid "Other Resources"
