fix: powrap issue

--- a/using/mac.po
+++ b/using/mac.po
@@ -60,10 +60,10 @@ msgstr ""
 "macOS solía venir con Python 2.7 preinstalado entre las versiones 10.8 y "
 "`12.3 <https://developer.apple.com/documentation/macos-release-notes/"
 "macos-12_3-release-notes#Python>`_. Te invitamos a instalar la versión más "
-"reciente de Python 3 desde el sitio web de Python (https://www.python."
-"org).  Un paquete \"binario universal\" para la versión actual de Python, "
-"que se ejecuta nativamente en el nuevo procesador Intel y el antiguo PPC "
-"de Mac, está disponible ahí."
+"reciente de Python 3 desde el sitio web de Python (https://www.python.org).  "
+"Un paquete \"binario universal\" para la versión actual de Python, que se "
+"ejecuta nativamente en el nuevo procesador Intel y el antiguo PPC de Mac, "
+"está disponible ahí."
 
 #: ../Doc/using/mac.rst:27
 msgid "What you get after installing is a number of things:"
@@ -78,8 +78,8 @@ msgid ""
 msgstr ""
 "Una carpeta :file:`Python 3.12` en su carpeta :file:`Applications`. Aquí "
 "encontrará IDLE, el entorno de desarrollo que es una parte estándar de las "
-"distribuciones oficiales de Python; y PythonLauncher, que habilita la "
-"opción de hacer doble clic en los scripts de Python desde el Finder."
+"distribuciones oficiales de Python; y PythonLauncher, que habilita la opción "
+"de hacer doble clic en los scripts de Python desde el Finder."
 
 #: ../Doc/using/mac.rst:34
 msgid ""
