Translate 'tutorial/inputoutput.po'

--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -199,16 +199,20 @@ msgid ""
 "expression, an equal sign, then the representation of the evaluated "
 "expression:"
 msgstr ""
+"El especificador ``=`` puede ser usado para expandir una expresión al texto "
+"de la expresión, un signo de igual, y la representación de la expresión "
+"evaluada: "
 
 #: ../Doc/tutorial/inputoutput.rst:145
-#, fuzzy
 msgid ""
 "See :ref:`self-documenting expressions <bpo-36817-whatsnew>` for more "
 "information on the ``=`` specifier. For a reference on these format "
 "specifications, see the reference guide for the :ref:`formatspec`."
 msgstr ""
-"Para obtener una referencia sobre estas especificaciones de formato, "
-"consulte la guía de referencia para :ref:`formatspec`."
+"Vea :ref:`expresiones auto-documentadas <bpo-36817-whatsnew>` para más "
+"información en el especificador ``=``. Para obtener una referencia sobre "
+"estas especificaciones de formato, consulte la guía de referencia para :ref:"
+"`formatspec`."
 
 #: ../Doc/tutorial/inputoutput.rst:152
 msgid "The String format() Method"
@@ -273,13 +277,12 @@ msgstr ""
 "`vars`, que retorna un diccionario conteniendo todas las variables locales."
 
 #: ../Doc/tutorial/inputoutput.rst:202
-#, fuzzy
 msgid ""
 "As an example, the following lines produce a tidily aligned set of columns "
 "giving integers and their squares and cubes::"
 msgstr ""
-"Como ejemplo, las siguientes lineas producen un conjunto de columnas "
-"alineadas ordenadamente que dan enteros y sus cuadrados y cubos:"
+"Como un ejemplo, las siguientes lineas producen un conjunto de columnas "
+"alineadas ordenadamente que dan enteros, sus cuadrados y sus cubos::"
 
 #: ../Doc/tutorial/inputoutput.rst:219
 msgid ""
@@ -364,14 +367,14 @@ msgid "Reading and Writing Files"
 msgstr "Leyendo y escribiendo archivos"
 
 #: ../Doc/tutorial/inputoutput.rst:291
-#, fuzzy
 msgid ""
 ":func:`open` returns a :term:`file object`, and is most commonly used with "
 "two positional arguments and one keyword argument: ``open(filename, mode, "
 "encoding=None)``"
 msgstr ""
 "La función :func:`open` retorna un :term:`file object`, y se usa normalmente "
-"con dos argumentos: ``open(nombre_de_archivo, modo)``."
+"con dos argumentos posicionales y un argumento nombrado: "
+"``open(nombre_de_archivo, modo, encoding=None)``."
 
 #: ../Doc/tutorial/inputoutput.rst:304
 msgid ""
@@ -626,7 +629,6 @@ msgstr ""
 "diccionarios, o instancias de clases, las cosas se ponen más complicadas."
 
 #: ../Doc/tutorial/inputoutput.rst:478
-#, fuzzy
 msgid ""
 "Rather than having users constantly writing and debugging code to save "
 "complicated data types to files, Python allows you to use the popular data "
@@ -639,13 +641,13 @@ msgid ""
 "file or data, or sent over a network connection to some distant machine."
 msgstr ""
 "En lugar de tener a los usuarios constantemente escribiendo y debugueando "
-"código para grabar tipos de datos complicados, Python te permite usar "
-"formato intercambiable de datos popular llamado `JSON (JavaScript Object "
+"código para guardar tipos de datos complicados, Python te permite usar el "
+"popular formato intercambiable de datos llamado `JSON (JavaScript Object "
 "Notation) <http://json.org>`_. El módulo estándar llamado :mod:`json` puede "
 "tomar datos de Python con una jerarquía, y convertirlo a representaciones de "
-"cadena de caracteres; este proceso es llamado :dfn:`serializing`. "
+"cadena de caracteres; este proceso es llamado :dfn:`serializado`. "
 "Reconstruir los datos desde la representación de cadena de caracteres es "
-"llamado :dfn:`deserializing`. Entre serialización y deserialización, la "
+"llamado :dfn:`deserializado`. Entre la serialización y deserialización, la "
 "cadena de caracteres representando el objeto quizás haya sido guardado en un "
 "archivo o datos, o enviado a una máquina distante por una conexión de red."
 
@@ -679,19 +681,21 @@ msgstr ""
 "hacer::"
 
 #: ../Doc/tutorial/inputoutput.rst:507
-#, fuzzy
 msgid ""
 "To decode the object again, if ``f`` is a :term:`binary file` or :term:`text "
 "file` object which has been opened for reading::"
 msgstr ""
 "Para decodificar un objeto nuevamente, si ``f`` es un objeto :term:`archivo "
-"de texto` que fue abierto para lectura::"
+"binario` o :term:`archivo de texto` que fue abierto para lectura::"
 
 #: ../Doc/tutorial/inputoutput.rst:513
 msgid ""
 "JSON files must be encoded in UTF-8. Use ``encoding=\"utf-8\"`` when opening "
 "JSON file as a :term:`text file` for both of reading and writing."
 msgstr ""
+"Los archivos JSON deben ser codificados en UTF-8. Utilize "
+"``encoding=\"utf-8\"`` cuando abra un archivo JSON como :term:`archivo de "
+"texto` para lectura y escritura."
 
 #: ../Doc/tutorial/inputoutput.rst:516
 msgid ""
@@ -707,7 +711,7 @@ msgstr ""
 
 #: ../Doc/tutorial/inputoutput.rst:522
 msgid ":mod:`pickle` - the pickle module"
-msgstr ":mod:`pickle`  - El  módulo *pickle*"
+msgstr ":mod:`pickle` - El módulo *pickle*"
 
 #: ../Doc/tutorial/inputoutput.rst:524
 msgid ""
