--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -704,7 +704,7 @@ msgid ""
 "JSON file as a :term:`text file` for both of reading and writing."
 msgstr ""
 "Los archivos JSON deben estar codificados en UTF-8. Utilice "
-"``encoding=\"utf-8\"`` al abrir un archivo JSON como term:`text file` tanto "
+"``encoding=\"utf-8\"`` al abrir un archivo JSON como :term:`text file` tanto "
 "para lectura como para escritura."
 
 #: ../Doc/tutorial/inputoutput.rst:516
