Traducción includes/wasm-notavail
Closes #1908

--- a/includes/wasm-notavail.po
+++ b/includes/wasm-notavail.po
@@ -19,7 +19,7 @@ msgstr ""
 "Generated-By: Babel 2.10.3\n"
 
 msgid ":ref:`Availability <availability>`: not Emscripten, not WASI."
-msgstr ""
+msgstr ":ref:`Availability <availability>`: no Emscripten, no WASI."
 
 #: ../Doc/includes/wasm-notavail.rst:5
 msgid ""
@@ -27,3 +27,6 @@ msgid ""
 "``wasm32-emscripten`` and ``wasm32-wasi``. See :ref:`wasm-availability` for "
 "more information."
 msgstr ""
+"Este módulo no funciona o no está disponible en las plataformas WebAssembly "
+"``wasm32-emscripten`` y ``wasm32-wasi``. Consulte :ref:`wasm-availability` "
+"para obtener más información."
