--- a/using/windows.po
+++ b/using/windows.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2023-01-10 15:09+0100\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2023-02-14 11:46-0300\n"
+"Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/using/windows.rst:7
 msgid "Using Python on Windows"
@@ -1759,8 +1759,8 @@ msgstr ""
 "reciente de Python 3.x. Al igual que con los ejemplos de línea de comandos "
 "anteriores, puede especificar un calificador de versión más explícito. "
 "Suponiendo que tiene instalado Python 3.7, intente cambiar la primera línea "
-"a ``#! python3.7`` y debería encontrar la información de la versión |version|"
-" impresa."
+"a ``#! python3.7`` y debería encontrar la información de la versión |"
+"version| impresa."
 
 #: ../Doc/using/windows.rst:790
 msgid ""
