Traducido archivo reference/executionmodel

--- a/reference/executionmodel.po
+++ b/reference/executionmodel.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-02 19:39+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2023-02-21 17:07-0300\n"
+"Last-Translator: Francisco Mora <fr.morac@duocuc.cl>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #: ../Doc/reference/executionmodel.rst:6
 msgid "Execution model"
@@ -85,33 +86,35 @@ msgstr ""
 
 #: ../Doc/reference/executionmodel.rst:59
 msgid "The following constructs bind names:"
-msgstr ""
+msgstr "Las siguientes construcciones enlazan nombres:"
 
 #: ../Doc/reference/executionmodel.rst:61
 msgid "formal parameters to functions,"
-msgstr ""
+msgstr "parámetros formales de las funciones,"
 
 #: ../Doc/reference/executionmodel.rst:62
 msgid "class definitions,"
-msgstr ""
+msgstr "definiciones de clase,"
 
 #: ../Doc/reference/executionmodel.rst:63
 msgid "function definitions,"
-msgstr ""
+msgstr "definiciones de funciones,"
 
 #: ../Doc/reference/executionmodel.rst:64
 msgid "assignment expressions,"
-msgstr ""
+msgstr "expresiones de asignación,"
 
 #: ../Doc/reference/executionmodel.rst:65
 msgid ""
 ":ref:`targets <assignment>` that are identifiers if occurring in an "
 "assignment:"
 msgstr ""
+":ref:`targets <assignment>` que son identificadores si aparecen en una "
+"asignación:"
 
 #: ../Doc/reference/executionmodel.rst:68
 msgid ":keyword:`for` loop header,"
-msgstr ""
+msgstr ":keyword:`for` cabecera del bucle,"
 
 #: ../Doc/reference/executionmodel.rst:69
 msgid ""
@@ -119,10 +122,13 @@ msgid ""
 "clause, :keyword:`except* <except_star>` clause, or in the as-pattern in "
 "structural pattern matching,"
 msgstr ""
+"después de :keyword:`!as` en una sentencia :keyword:`with`, cláusula :"
+"keyword:`except`, cláusula :keyword:`except* <except_star>`, o en el patrón "
+"as en la concordancia de patrones estructurales,"
 
 #: ../Doc/reference/executionmodel.rst:71
 msgid "in a capture pattern in structural pattern matching"
-msgstr ""
+msgstr "en un patrón de captura en la concordancia de patrones estructurales"
 
 #: ../Doc/reference/executionmodel.rst:73
 msgid ":keyword:`import` statements."
